--- a/src/docs/userguide/userguide.tex
+++ b/src/docs/userguide/userguide.tex
@@ -13,7 +13,7 @@
 \def \UGOUT {../../samples/userguideOutput}  
 \def \TUTHD {userguide/tutorial/}
 
-\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport} 
+\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,maven,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -85,6 +85,7 @@
 \include{groovyPlugin}
 \include{warPlugin} 
 \include{depMngmt} 
+\include{maven} 
 \include{buildLifecycle}
 \include{multiproject}
 \include{organizeBuildLogic} 
