Added osgi chapter to master
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1092 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/userguide.tex
+++ b/src/docs/userguide/userguide.tex
@@ -13,7 +13,7 @@
 \def \UGOUT {../../samples/userguideOutput}  
 \def \TUTHD {userguide/tutorial/}
 
-\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,depMngmt,maven,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport} 
+\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,osgi,depMngmt,maven,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport}
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -84,7 +84,8 @@
 \include{javaPlugin} 
 \include{groovyPlugin}
 \include{warPlugin} 
-\include{depMngmt} 
+\include{osgi} 
+\include{depMngmt}
 \include{maven} 
 \include{buildLifecycle}
 \include{multiproject}
