--- a/src/docs/userguide/osgi.tex
+++ b/src/docs/userguide/osgi.tex
@@ -21,9 +21,9 @@ configure(project.archive_jar.osgi) {
     instruction 'Private-Package',
             'org.mycomp.package1',
             'org.mycomp.package2'
-    instruction 'Bundle-Vendor', 'Carrier IQ'
+    instruction 'Bundle-Vendor', 'MyCompany'
     instruction 'Bundle-Description', 'Platform2: Metrics 2 Measures Framework'
-    instruction 'Bundle-DocURL', 'http://www.carrieriq.com'
+    instruction 'Bundle-DocURL', 'http://www.mycompany.com'
 }
 \end{Verbatim}
 The first argument of the instruction call is the key of the property. The other arguments form the value. They are joined by Gradle with the \texttt{,} separator. To learn more about the available instructions have a look at the \href{http://www.aqute.biz/Code/Bnd}{BND tool}.
