GRADLE-299, GRADLE-263 - Started adding user guide and int test coverage for the project reports - Don't include the user guide outputs in the distribution
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1196 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/overview.tex
+++ b/src/docs/userguide/overview.tex
@@ -12,7 +12,7 @@ Here is a list of some of Gradle's features.
 	\item[Configure By DAG] Gradle has a distinct configuration and execution phase. Thus we can offer you special hooks. You can add configuration to your build, based on the complete execution graph of tasks, before any task is executed.
 	\item[Easy Ivy] Our dependency management is based on Apache Ivy, the most advanced and powerful dependency management in the Java world. We have Ivy integrated in our build-by-convention framework. It is ready to go out-of-the-box. Ivy is mostly used via its Ant tasks but it also provides an API. Gradle integrates deeply with Ivy via this API. Gradle has its own dependency DSL on top of Ivy. This DSL introduces a couple of features not provided by Ivy itself.
 	\item[Client Modules] We think dependency management is important to any project. \emph{Client Modules} provide this, without the need of remote repositories and \texttt{ivy.xml} or \texttt{pom.xml} files. For example you can just put your jars into svn and yet enjoy complete transitive dependency management. Gradle also support fully Ivy or Maven repository infrastructures based on \texttt{ivy.xml} or \texttt{pom.xml} files and remote repositories.
-	\item[Cross Project Configuration] Enjoy how easy and yet how extremely powerful the handling of multi-project builds can be. Ivy introduces \emph{Configuration Injection} to make this possible. 
+	\item[Cross Project Configuration] Enjoy how easy and yet how extremely powerful the handling of multi-project builds can be. Gradle introduces \emph{Configuration Injection} to make this possible. 
 	\item[Distinct Dependency Hierarchies] We allow you to model the project relationships in a multi-project build as they really are for your problem domain. Gradle follows your layout not vice versa.
 	\item[Partial Builds] With Maven multi-project builds only work if executed from the root project and thus requiring a complete build. If you build from a subproject, only the subproject is build, not the projects the subproject depends on. Gradle offers partial builds. The subproject is build plus the projects it depends on. This is very convenient for larger builds.    	
 	\item[Internal Groovy DSL] Gradle's build scripts are written in Groovy, not XML. This offers many  advantages to XML: Rich interaction with existing libraries, ease of use, more power and a slower learning curve are some of them.
