--- a/src/docs/userguide/thisAndThat.tex
+++ b/src/docs/userguide/thisAndThat.tex
@@ -24,6 +24,25 @@ Every task has also a \texttt{enabled} flag which defaults to \texttt{true}. Set
 \codeInput{../../samples/userguide/tutorial/disableTask/build.gradle}
 \outputInputTutorial{disableTask}
 
+\section{Obtaining Information About Your Build}
+Gradle provides several ways that you can use to find out many details of your build. This can be useful for
+understanding the structure and dependencies of your build, and for debugging problems. Firstly, Gradle provides several
+command-line options which show particular details of your build. And secondly, Gradle provides a \texttt{project-reports}
+plugin, which adds tasks to generate reports about your build.
+
+Running \texttt{gradle --tasks} gives you a list of the tasks which make up the build, broken down by project. This
+report also shows the default tasks, if any, of each project. Note that tasks can have descriptions. Below is an example
+of this report:
+\outputInputTutorial{taskListReport}
+
+Running \texttt{gradle --dependencies} gives you a list of the dependencies of the build, broken down by project. Below
+is an example of this report:
+\outputInputTutorial{dependencyListReport}
+
+Running \texttt{gradle --properties} gives you a list of the properties of each project in the build. Below is an
+example of this report:
+\outputInputTutorial{propertyListReport}
+
 \section{Directory Creation} % (fold)
 \label{sec:directory_creation}
 There is a common situation, that multiple tasks depend on the existence of a directory. Of course you can deal with this by adding a \texttt{mkdir} to the beginning of those tasks. But this is kind of bloated. 
