--- a/src/docs/userguide/javaPlugin.tex
+++ b/src/docs/userguide/javaPlugin.tex
@@ -92,13 +92,13 @@ Table \ref{javalayout} shows the default project layout assumed by the Java Plug
 \end{table}
 
 \section{Init} % (fold)
-\label{sec:initialization}
 The \texttt{init} task has no default action attached to it. It is meant to be a hook. You can add actions to it or associates your custom tasks with it. The Java Plugin executes this task before any other of its tasks get executed (except \texttt{clean} and \texttt{javadoc} which does not depends on \texttt{init}).
 % section initialization (end)
 
 \section{Javadoc} % (fold)
 \label{sec:javadoc}
 The \texttt{javadoc} task has no default association with any other task. It has no prerequisites on the actions of other tasks, as it operates on the source. It does not provide a fine-grained configuration API yet. If you need this, you have to use for example Ant's javadoc task directly.
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|} \hline
 		\multicolumn{2}{|c|}{Convention to Property Mapping} \\ \hline
@@ -106,7 +106,9 @@ The \texttt{javadoc} task has no default association with any other task. It has
 		srcDirs & srcDirs \\ \hline
 		destinationDir & [javadocDir] \\ \hline
 	\end{tabular} 
-\end{center} 
+\end{center}
+\caption{Java Convention Object - Javadoc Properties}
+\end{table}
 % section javadoc (end)
 
 \section{Clean} % (fold)
@@ -117,6 +119,7 @@ The \texttt{clean} task simply removes the directory denoted by its \texttt{dir}
 \section{Resources} % (fold)
 \label{sec:resources}
 The \emph{Resources} task has two instances, \texttt{resources} and \texttt{testResources}. 
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|l|} \hline
 		\multicolumn{3}{|c|}{Convention to Property Mapping} \\ \hline
@@ -127,12 +130,15 @@ The \emph{Resources} task has two instances, \texttt{resources} and \texttt{test
 		testResources & destinationDir & testClassesDir \\ \hline
 	\end{tabular} 
 \end{center}
+\caption{Java Convention Object - Resource Properties}
+\end{table}
 \noindent The \texttt{resources} task offers includes and excludes directives as well as filters. Have a look at \href{\API tasks/Resources.html}{org.gradle.api.tasks.Resources} to learn about the details.
 % section resources (end)
 
 \section{Compile} % (fold)
 \label{sec:compile}
 The \emph{Compile} task has two instances, \texttt{compile} and \texttt{testCompile}. 
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|l|} \hline
 		\multicolumn{3}{|c|}{Convention to Property Mapping} \\ \hline
@@ -147,7 +153,9 @@ The \emph{Compile} task has two instances, \texttt{compile} and \texttt{testComp
 		testCompile & targetCompatibility & targetCompatibility \\ \hline
 	\end{tabular} 
 \end{center}
-\noindent The classpath of the compile task is derived from two sources. One is the \emph{configuration} assigned to the task by the dependency manager. The other classpath source is the \texttt{unmanagedClasspath} property: a list of files denoting a jar or a directory. Usually you create your classpath with the dependency manager. The \texttt{unmanagedClasspath} is used internally by Gradle. This classpath is not shared between projects in a multi-project build. Nor is it part of a dependency descriptor if you choose to upload your library to a repository. 
+\caption{Java Convention Object - Compile Properties}
+\end{table}
+\noindent The classpath of the compile task is derived from two sources. One is the \emph{configuration} assigned to the task by the dependency manager. The other classpath source is the \texttt{unmanagedClasspath} property: a list of files denoting a jar or a directory. Usually you create your classpath with the dependency manager. The \texttt{unmanagedClasspath} is used internally by Gradle. This classpath is not shared between projects in a multi-project build. Nor is it part of a dependency descriptor if you choose to upload your library to a repository.
 See section \ref{} how the JavaPlugin glues the tasks with the dependency manager and see the whole chapter \ref{cha:dependency_management} how to use the dependency manager.
 
 Have a look at \href{\API tasks/compile/Compile.html}{org.gradle.api.tasks.compile.Compile} to learn about the details. The compile task delegates to Ants javac task to do the compile. Via the compile task you can set most of the properties of Ants javac task. 
@@ -156,6 +164,7 @@ Have a look at \href{\API tasks/compile/Compile.html}{org.gradle.api.tasks.compi
 \section{Test} % (fold)
 \label{sec:java_test}
 The \texttt{test} task executes the unit tests which have been compiled by the \texttt{testCompile} task. 
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|} \hline
 		\multicolumn{2}{|c|}{Convention to Property Mapping} \\ \hline
@@ -165,7 +174,9 @@ The \texttt{test} task executes the unit tests which have been compiled by the \
 		unmanagedClasspath & [classesDir] \\ \hline
 	\end{tabular} 
 \end{center}
-\noindent Have a look at \href{\API tasks/testing/Test.html}{org.gradle.api.tasks.testing.Test} to learn more. Right now the test results are always in XML-format. The task has a \texttt{stopAtFailuresOrErrors} property to control the behavior when tests are failing. Test \emph{always} executes all tests. It stops the build afterwards if \texttt{stopAtFailuresOrErrors} is true and there are failing tests or tests that have thrown an uncaught exception. 
+\caption{Java Convention Object - Test Properties}
+\end{table}
+\noindent Have a look at \href{\API tasks/testing/Test.html}{org.gradle.api.tasks.testing.Test} to learn more. Right now the test results are always in XML-format. The task has a \texttt{stopAtFailuresOrErrors} property to control the behavior when tests are failing. Test \emph{always} executes all tests. It stops the build afterwards if \texttt{stopAtFailuresOrErrors} is true and there are failing tests or tests that have thrown an uncaught exception.
 
 Per default the tests are run in a forked JVM and the fork is done per test. You can modify this behavior by setting forking to false or set the forkmode to once.
 
@@ -177,6 +188,7 @@ The test task delegates to Ants junit task. TestNG is not supported yet. You can
 \section{Bundles} % (fold)
 \label{sec:bundles}
 The \emph{Bundle} task has two instances, \texttt{libs} and \texttt{dists}. The Bundle task is a special animal. It is a container for archive tasks (jar, zip, ...).  
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|l|} \hline
 		\multicolumn{3}{|c|}{Convention to Property Mapping} \\ \hline
@@ -185,6 +197,8 @@ The \emph{Bundle} task has two instances, \texttt{libs} and \texttt{dists}. The 
 		dists & tasksBaseName & \texttt{project.archivesBaseName} \\ \hline
 	\end{tabular} 
 \end{center}
+\caption{Java Convention Object - Bundle Properties}
+\end{table}
 \subsection{The libs Task} % (fold)
 \label{sub:the_libs_task}
 The \texttt{libs} task contains all the archive tasks which constitute the libraries needed to use your project as a library. Executing the libs task leads to the execution of all the contained archive tasks. In a multi-project build the archives which are produced by the \texttt{libs} task are available in the classpath of a dependent project. If you upload your project into a repository, those archives are part of the dependency descriptor. If you come from Maven you can have only one library jar per project. With Ivy you can have as many as you want. 
@@ -216,6 +230,7 @@ t.b.d.
 \section{Archive Tasks} % (fold)
 \label{sec:archive_tasks}
 An archive task is a task which produces an archive at execution time. The following archives tasks are available:
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|l|} \hline
 		Type & Accepted file container & Extends \\ \hline
@@ -225,6 +240,8 @@ An archive task is a task which produces an archive at execution time. The follo
 		\href{\API tasks/bundling/War.html}{org.gradle.api.tasks.bundling.War} & fileSet, fileCollection, zipFileSet & Jar \\ \hline		
 	\end{tabular}
 \end{center}
+\caption{Archive Tasks}
+\end{table}
 The following file containers are available:
 \begin{table}
 \begin{center}
@@ -348,6 +365,7 @@ Gradle comes with a number of tasks for generating eclipse files for your projec
 \subsection{Eclipse Classpath} % (fold)
 \label{sub:eclipse_classpath}
 \href{\API tasks/ide/eclipse/EclipseClasspath.html}{org.gradle.api.tasks.ide.eclipse.EclipseClasspath} has a default instance with the name \texttt{eclipseCp}. It generates a \texttt{.classpath} file.
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|} \hline
 		\multicolumn{2}{|c|}{Convention to Property Mapping} \\ \hline
@@ -359,10 +377,13 @@ Gradle comes with a number of tasks for generating eclipse files for your projec
 		classpathLibs & the resolve result for \texttt{testRuntime} \\ \hline
 	\end{tabular} 
 \end{center}
+\caption{Java Convention Object - Eclipse Properties}
+\end{table}
 % subsection eclipse_classpath (end)
 \subsection{Eclipse Project} % (fold)
 \label{sub:eclipse_project}
 \href{\API tasks/ide/eclipse/EclipseProject.html}{org.gradle.api.tasks.ide.eclipse.EclipseProject} has a default instance with the name \texttt{eclipseProject}. It generates a \texttt{.project} file.
+\begin{table}
 \begin{center}
 	\begin{tabular}{|l|l|} \hline
 		\multicolumn{2}{|c|}{Convention to Property Mapping} \\ \hline
@@ -371,6 +392,8 @@ Gradle comes with a number of tasks for generating eclipse files for your projec
 		projectType & ProjectType.JAVA \\ \hline
 	\end{tabular} 
 \end{center}
+\caption{Java Convention Object - Eclipse Project Properties}
+\end{table}
 % subsection eclipse_project (end)
 The java plugin also provides a task called \texttt{eclipse} which generates both of the eclipse tasks mentioned above. If you are using the war plugin, \texttt{eclipse} also leads to the execution of the \texttt{eclipseWtp} task.
 % section eclipse (end)
