--- a/src/docs/userguide/potentialTraps.tex
+++ b/src/docs/userguide/potentialTraps.tex
@@ -5,7 +5,7 @@
 \label{sec:groovy_script_variables}
 For Gradle users it is important to understand how Groovy deals with script variables. Groovy has to type of script variables. One with a local scope and one with a script wide scope.
 \codeInput{../../samples/userguide/tutorial/scope.groovy}
-\outputInput{../../samples/userguideOutput/scope.out}
+\outputInputTutorial{scope}
 Variables which are declared with a type modifier are visible within closures but not visible within methods. This is a heavily discussed behavior in the Groovy community.\footnote{One of those discussions can be found here: \url{http://www.nabble.com/script-scoping-question-td16034724.html}}
 % subsection groovy_script_variables (end)
 
@@ -13,6 +13,6 @@ Variables which are declared with a type modifier are visible within closures bu
 \label{sec:configuration_and_execution_phase}
 It is important to keep in mind that Gradle has a distinct configuration and execution phase (see chapter \ref{cha:the_build_lifecycle}). 
 \codeInput{../../samples/userguide/tutorial/mkdirTrap/build.gradle}
-\outputInput{../../samples/userguideOutput/mkdirTrap.out}
+\outputInputTutorial{mkdirTrap}
 As the creation of the directory happens during the configuration phase, the \texttt{clean} task removes the directory during the execution phase.
 % chapter potential_traps (end)
