fixed case of file name
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1210 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/userguide.tex
+++ b/src/docs/userguide/userguide.tex
@@ -13,7 +13,7 @@
 \def \UGOUT {../../samples/userguideOutput}  
 \def \TUTHD {userguide/tutorial/}
 
-\includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,osgi,depMngmt,maven,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport}
+\includeonly{introduction,buildscripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,logging,plugins,javaPlugin,groovyPlugin,warPlugin,osgi,depMngmt,maven,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport}
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -73,7 +73,7 @@
 \newpage 
 \pagenumbering{arabic} 
 \include{introduction} 
-\include{buildScripts} 
+\include{buildscripts} 
 \include{javaTutorial} 
 \include{thisAndThat} 
 \include{overview} 
